syntax = "proto3";

option csharp_namespace = "EPlusActivities.Grpc.Messages.FileService";

message DeleteFileByFileIdGrpcRequest
{
  string file_id = 1;
}

message DeleteFileByKeyGrpcRequest
{
  string owner_id = 1;
  string key = 2;
}

message DeleteFileGrpcResponse
{
  bool succeeded = 1;
}
