syntax = "proto3";

option csharp_namespace = "EPlusActivities.Grpc.Messages.FileService";

message DownloadFileByFileIdGrpcRequest
{
  string file_id = 1;
}

message DownloadFileByKeyGrpcRequest
{
  string owner_id = 1;
  string key = 2;
}

message DownloadFileGrpcResponse
{
  bytes data = 1;
  string content_type = 2;
}

message DownloadStaticFileGrpcResponse
{
  string url = 1;
  string content_type = 2;
}
